--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "roboto", "sans-serif";
 }
 
 .center {
